--- a/_bibliography/bib_chg_students.bib
+++ b/_bibliography/bib_chg_students.bib
@@ -1410,14 +1410,12 @@ Keywords: Microplastics pollution; River sediment; Amazon},
   volume    = {163},
   pages     = {105219},
   issn      = {0141-1136},
-  abstract  = {Plastic found in the coastal zone is a result of waste mismanagement. This material comes directly from offshore disposal or by fishing debris, other marine activities, and by marine currents and winds, as well as urban drainage systems and estuaries. Specifically, in the case of plastic pellets, which are spheres with 2-5 mm that constitute the raw material for the manufacture of plastic products, the Santos Port and the plastic factories in Cubatão city (Brazilian southeastern coast), are considered the main local sources for the São Paulo state coast. Consequently, the beaches most affected by this pollutant are those near Santos estuary, like Enseada do Guarujá beach. However, some questions are still open, such as: what are the mechanisms which control the pellets deposition, and which locations are most favorable for deposition on the beach? To answer these questions, a four-step research was carried out at Enseada beach: 1) Plastic pellets geodetic survey based on GNSS positioning; 2) Beach geomorphometric parameters (altitude, aspect, and slope) derived by Digital Elevation Model (DEM); 3) Strandline altitude estimated through wave climate and tide height; and, 4) Plastic pellets deposition Suitability Index (PSI). The joint analysis of the altimetric, geomorphometric and meteoceanographic aspects showed that the beach areas with altitudes higher than those calculated for the strandline (> 2.06 m), slope ∼ 3º and facing the same direction of the higher energy waves (157.5-202.5º) were more susceptible to pellet deposition. This indicates that the accumulation of this pollutant on the beach is controlled not only by its physical characteristics, but mainly by storm surge events. Besides, surveys with geodetic reference (fixed, univocal, and relatively stable on time) bring up altimetric information as a result of all interactions and can be compared with other beaches anywhere on the planet — thus contributing to a standardization of the survey methodology.},
   access    = {Paywalled},
   doi       = {10.1016/j.marenvres.2020.105219},
   keywords  = {Nurdles, GNSS, Strandline altitude, Extreme events, Storm surge, DEM},
   kind      = {journal},
   owner     = {guano},
-  timestamp = {2021-01-05-23-00},
-  url       = {https://doi.org/10.1016/j.marenvres.2020.105219},
+  timestamp = {2021-05-06-11-26},
 }
 
 @TechReport{Grohmann2009grass,
@@ -1484,13 +1482,14 @@ Keywords: Microplastics pollution; River sediment; Amazon},
 
 @Article{Dias2021,
   author    = {Dias, H. C. and Gramani, M. F. and Grohmann, C. H. and Bateira, C. and Vieira, B. C.},
-  journal   = {Natural Hazards},
   title     = {{Statistical-based shallow landslide susceptibility assessment for a tropical environment: a case study in the southeastern Brazilian coast}},
+  journal   = {Natural Hazards},
   year      = {2021},
+  access    = {Paywalled},
   doi       = {10.1007/s11069-021-04676-y},
-  kind      = {submitted},
+  kind      = {journal},
   owner     = {guano},
-  timestamp = {2021-01-05-23-05},
+  timestamp = {2021-05-06-11-29},
 }
 
 @Article{Paz2021,
