several changes to publications and grass course

--- a/downloads/CarlosGrohmann_papers.bib
+++ b/downloads/CarlosGrohmann_papers.bib
@@ -1172,4 +1172,96 @@
   timestamp = {2020-08-22},
 }
 
+@Article{Ferreira2021,
+  author    = {Ferreira, A. T. S. and Eduardo Siegle and Maria Carolina Hernandez Ribeiro and Marcelo Soares Teles Santos and Carlos H. Grohmann},
+  title     = {{The dynamics of plastic pellets on sandy beaches: a new methodological approach}},
+  journal   = {Marine Environmental Research},
+  year      = {2021},
+  volume    = {163},
+  pages     = {105219},
+  issn      = {0141-1136},
+  access    = {Paywalled},
+  doi       = {10.1016/j.marenvres.2020.105219},
+  keywords  = {Nurdles, GNSS, Strandline altitude, Extreme events, Storm surge, DEM},
+  kind      = {journal},
+  owner     = {guano},
+  timestamp = {2021-01-05-22-58},
+  url       = {https://doi.org/10.1016/j.marenvres.2020.105219},
+}
+
+@Article{Villaca2021,
+  author    = {Villaça, C. V. N. and Crósta, A. P. and Grohmann, C. H.},
+  title     = {{Morphometric Analysis of Pluto’s Impact Craters}},
+  journal   = {Remote Sensing},
+  year      = {2021},
+  volume    = {13(3)},
+  pages     = {377},
+  doi       = {10.3390/rs13030377},
+  timestamp = {2021-01-22},
+}
+
+@Article{GodoyVeiga2021,
+  author    = {Milena Godoy-Veiga and Bruno Barçante Ladvocat Cintra and Nicolás Misailidis Stríkis and Francisco Willian Cruz and Carlos Henrique Grohmann and Matheus Simões Santos and Lior Regev and Elisabetta Boaretto and Gregório Ceccantini and Giuliano Maselli Locosselli},
+  title     = {{The value of climate responses of individual trees to detect areas of climate-change refugia, a tree-ring study in the Brazilian seasonally dry tropical forests}},
+  journal   = {Forest Ecology and Management},
+  year      = {2021},
+  volume    = {488},
+  pages     = {118971},
+  issn      = {0378-1127},
+  doi       = {10.1016/j.foreco.2021.118971},
+  keywords  = {Climate change, Dendrochronology, Karst, Microenvironment, Radiocarbon (C), Tropics},
+  owner     = {guano},
+  timestamp = {2021-03-02-14-23},
+}
+
+@Article{Strobl2021,
+  author  = {Strobl, P. A. and Bielski, C. and Guth, P. L. and Grohmann, C. H. and Muller, J.-P. and L\'opez-V\'azquez, C. and Gesch, D. B. and Amatulli, G. and Riazanoff, S. and Carabajal, C.},
+  title   = {{The Digital Elevation Model Intercomparison eXperiment DEMIX, a community based approach at global DEM benchmarking}},
+  journal = {The International Archives of the Photogrammetry, Remote Sensing and Spatial Information Sciences},
+  year    = {2021},
+  volume  = {XLIII-B4-2021},
+  pages   = {395--400},
+  doi     = {10.5194/isprs-archives-XLIII-B4-2021-395-2021},
+}
+
+@Article{Dias2021nh,
+  author    = {Dias, Helen Cristina and Gramani, Marcelo Fischer and Grohmann, Carlos Henrique and Bateira, Carlos and Vieira, Bianca Carvalho},
+  title     = {{Statistical-based shallow landslide susceptibility assessment for a tropical environment: a case study in the southeastern Brazilian coast}},
+  journal   = {Natural Hazards},
+  year      = {2021},
+  month     = mar,
+  issn      = {1573-0840},
+  access    = {Paywalled},
+  kind      = {journal},
+  owner     = {guano},
+  refid     = {Dias2021},
+  timestamp = {2021-05-06-11-27},
+  url       = {https://doi.org/10.1007/s11069-021-04676-y},
+}
+
+@Article{Albuquerque2021,
+  author         = {Albuquerque, Rafael Walter and Ferreira, Manuel Eduardo and Olsen, Søren Ingvor and Tymus, Julio Ricardo Caetano and Balieiro, Cintia Palheta and Mansur, Hendrik and Moura, Ciro José Ribeiro and Costa, João Vitor Silva and Branco, Maurício Ruiz Castello and Grohmann, Carlos Henrique},
+  title          = {{Forest Restoration Monitoring Protocol with a Low-Cost Remotely Piloted Aircraft: Lessons Learned from a Case Study in the Brazilian Atlantic Forest}},
+  journal        = {Remote Sensing},
+  year           = {2021},
+  volume         = {13},
+  number         = {12},
+  issn           = {2072-4292},
+  access         = {Paywalled},
+  article-number = {2401},
+  doi            = {10.3390/rs13122401},
+  kind           = {journal},
+}
+
+@Article{Paz2021,
+  author   = {Paz, Andrea and Brown, Jason L. and Cordeiro, Carlos L. O. and Aguirre-Santoro, Julian and Assis, Claydson and Amaro, Renata Cecilia and Raposo do Amaral, Fabio and Bochorny, Thuane and Bacci, Lucas F. and Caddah, Mayara K. and d’Horta, Fernando and Kaehler, Miriam and Lyra, Mariana and Grohmann, Carlos Henrique and Reginato, Marcelo and Silva-Brandão, Karina Lucas and Freitas, André Victor Lucci and Goldenberg, Renato and Lohmann, Lúcia G. and Michelangeli, Fabián A. and Miyaki, Cristina and Rodrigues, Miguel T. and Silva, Thiago S. and Carnaval, Ana C.},
+  title    = {{Environmental correlates of taxonomic and phylogenetic diversity in the Atlantic Forest}},
+  journal  = {Journal of Biogeography},
+  year     = {2021},
+  access   = {Open Access},
+  doi      = {10.1111/jbi.14083},
+  keywords = {biodiversity correlates, climate stability, phylogenetic diversity, phylogenetic endemism, precipitation, species richness},
+  kind     = {journal},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
